<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SHS app</string>
    <string name="Feedback">Feedback Pop Up</string>
    <string name="a">A.&#x20;</string>
    <string name="b">B.&#x20;</string>
    <string name="c">C.&#x20;</string>
    <string name="d">D.&#x20;</string>
    <string name="dummy_content">This will be\nwhere the\nquestions go!</string>
    <string name="feedbackPop">Well hello!</string>
    <string name="Continue">Continue</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_end_screen">EndScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="PlayAgain">Replay!</string>
    <string name="Exit">Exit!</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="play">Play!</string>
    <string name="intro">This is the intro screen</string>
    <string name="stick_image">stick figure</string>
    <string name="link"><a href="http://www.vpul.upenn.edu/shs/" >Additional Questions? Click here!</a></string>

</resources>