<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >    

    	
    	<TextView
        	android:id="@+id/fullscreen_content"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="left"
        	android:layout_gravity="left"
        	android:keepScreenOn="true"
        	android:text="@string/dummy_content"
        	android:textColor="#33b5e5"
        	android:textSize="50sp"
        	android:textStyle="bold" 
        	android:paddingTop="40dp"/>
    
    </LinearLayout>
        

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent" >
            	<Button
            	    android:id="@+id/answer1"
            	    style="?buttonBarButtonStyle"
            	    android:layout_width="fill_parent"
            	    android:layout_height="wrap_content"
            	    android:text="@string/a"
            	    android:gravity="center_vertical"
            	    android:paddingLeft="50dp"
            	    android:onClick="onAnswer1" />
            
            	<Button
            	    android:id="@+id/answer2"
           		    style="?buttonBarButtonStyle"
            	    android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	android:text="@string/b" 
                	android:gravity="center_vertical"
            	    android:paddingLeft="50dp"
            	    android:onClick="onAnswer2" />
            
            	<Button
                	android:id="@+id/answer3"
                	style="?buttonBarButtonStyle"
                	android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	android:text="@string/c" 
                	android:gravity="center_vertical"
            	    android:paddingLeft="50dp"
            	    android:onClick="onAnswer3" />
            
            	<Button
                	android:id="@+id/answer4"
                	style="?buttonBarButtonStyle"
                	android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	android:text="@string/d" 
                	android:gravity="center_vertical"
            	    android:paddingLeft="50dp"
            	    android:onClick="onAnswer4" />
        	</LinearLayout>
    </FrameLayout>

</FrameLayout>